--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,10 +7,11 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    version: '20.x'
+    version: 'lts'
   displayName: 'Install Node.js'
 
 - script:
+    node --version
     npm install
   displayName: 'npm install'
 
