--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,15 +5,19 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: NodeTool@0
+- task: UseNode@1
   inputs:
-    version: 'lts'
+    version: '>=22.x'
   displayName: 'Install Node.js'
 
 - script: |
-    node --version
     npm install
-  displayName: 'npm install'
+  displayName: 'Install npm dependencies'
 
-- script: npm run build
-  displayName: 'npm build'
+- script: |
+    npm run build
+  displayName: 'Run build'
+
+- publish: $(Build.ArtifactStagingDirectory)
+  artifact: NodeApp
+  displayName: 'Publish Artifact'
