Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
 steps:
 - task: UseNode@1
   inputs:
-    version: '>=22.x'
+    version: '22.x'
   displayName: 'Install Node.js'
 
 - script: |
